src/test/ui/issues/issue-46471-1.stderr
error[E0597]: `z` does not live long enough (Ast)
  --> $DIR/issue-46471-1.rs:6:14
   |
LL |         &mut z
   |              ^ borrowed value does not live long enough
LL |     };
   |     - `z` dropped here while still borrowed
...
LL | }
   | - borrowed value needs to live until here

error[E0597]: `z` does not live long enough (Mir)
  --> $DIR/issue-46471-1.rs:6:9
   |
LL |         &mut z
   |         ^^^^^^
   |         |
   |         borrowed value does not live long enough
   |         borrow later used here
LL |     };
   |     - `z` dropped here while still borrowed

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
